feat : 회의 기능 구현, User setter 삭제